--- a/frontend/src/index.sass
+++ b/frontend/src/index.sass
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 *
   margin: 0
   padding: 0
-  font-family: 'Open Sans', 'Arial', 'Helvetica', sans-serif
+  font-family: 'Montserrat', 'Open Sans', 'Arial', 'Helvetica', sans-serif
   box-sizing: border-box
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
