made responsive layout for home page

--- a/frontend/src/components/header/Header.sass
+++ b/frontend/src/components/header/Header.sass
@@ -1,7 +1,6 @@
 .page-header
-  height: 5rem
+  max-height: 6rem
   background: #7F055F
   color: white
   display: flex
   align-items: center
-  padding: 0 2rem
