--- a/frontend/src/components/item/Item.sass
+++ b/frontend/src/components/item/Item.sass
@@ -7,7 +7,7 @@
     justify-content: center
     align-items: center
     padding: 1rem
-    height: 150px
+    height: 9rem
 
     img
       max-width: 100%
