--- a/frontend/src/index.sass
+++ b/frontend/src/index.sass
@@ -1,6 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import "sass/breakpoints"
+
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap')
+
 
 *
   margin: 0
@@ -9,3 +12,25 @@
   box-sizing: border-box
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
+
+html
+  font-size: 16px
+
+  @include md
+    font-size: 18px
+
+  @include lg
+    font-size: 16px
+
+
+.container
+  padding: 1rem
+
+  @include md
+    padding: 1rem 2rem
+
+  @include lg
+    padding: 1rem 4rem
+  
+  @include xl
+    padding: 2rem 8rem
